# procedgen

./: .ghci  .gitignore  README.md  defns.mk  package.yaml  procgen.cabal  repl.sh
src/: ProcGen.hs  Procedgen.hs
src/ProcGen/: Arbitrary.hs  Buffer.hs  Collapsible.hs  GHCI.hs  Live.hs  Plot.hs  PlotGUI.hs  PrettyPrint.hs  ReaderLogic.hs  Script.hs  TinyRelDB.hs  Types.hs  VectorBuilder.hs
src/ProcGen/Music/: AudioFont.hs  AudioSignal.hs  Composition.hs  KeyFreq88.hs  OS.hs  Sequencer.hs  SoundFont.hs  Synth.hs  TDBezier.hs  TDBezierSpline.hs  WaveFile.hs
src/ProcGen/Plot/: Examples.hs  GUI.hs
src/Procedgen/: Arbitrary.hs  Buffer.hs  Collapsible.hs  GHCI.hs  Infrastructure.hs  Plot.hs  PrimeNumbers.hs  Properties.hs  ReaderLogic.hs  Script.hs  TinyRelDB.hs  Types.hs  Vector.hs  VectorBuilder.hs
src/Procedgen/Music/: AudioFont.hs  AudioSignal.hs  Composition.hs  KeyFreq88.hs  Sequencer.hs  Synth.hs  TDBezier.hs  WaveFile.hs
src/Procedgen/Plot/: Examples.hs  GUI.hs
tests/: Infrastructure.hs  Live.hs
tests/ProcGen/: Infrastructure.hs  Live.hs
